fix: update CORS policy to allow common development ports (3000, 3001, 5000, 5173, 5174)